--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <i class="fas fa-play-circle" class="play-btn" style="width:50%; position:relative; top:-50%; cursor: pointer; transition:0.5s" ></i> -->
 
                     <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" width="1280" height="720" src="media/runway-ss21.mp4" frameborder="0" allowfullscreen></iframe>
+                        <iframe class="embed-responsive-item" width="1280" height="720" src="https:/en.lining.com/media/runway-ss21.mp4" frameborder="0" allowfullscreen></iframe>
                         <div class="inner">
                             <div class="top-left" style="position: absolute; top: 80px; left: 120px; color: yellow;">
                                 <p><i style="opacity: 50%;">10:45</i><br>Spring Summer 2021<br> Premium Collection </p>
@@ -240,7 +240,7 @@
         </div>
 
         <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" width="1280" height="720" src="game-on.mp4" frameborder="0" allowfullscreen></iframe>
+            <iframe class="embed-responsive-item" width="1280" height="720" src="https://en.lining.com/media/game-on.mp4" frameborder="0" allowfullscreen></iframe>
             <div class="inner">
                 <div class="top-left" style="position: absolute; top: 80px; left: 120px; color: yellow;">
                     <p><i style="opacity: 50%;">02:08</i><br>Game On<br> 30 Years of Sport & Style </p>
