--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
                     <i class="fas fa-play-circle" class="play-btn" style="width:50%; position:relative; top:-50%; cursor: pointer; transition:0.5s" ></i> -->
 
                     <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" width="1280" height="720" src="https:/en.lining.com/media/runway-ss21.mp4" frameborder="0" allowfullscreen></iframe>
-                        <div class="inner">
+                        <iframe class="embed-responsive-item" width="1280" height="720" src="https://en.lining.com/media/runway-ss21.mp4" frameborder="0" allowfullscreen></iframe>
+                        <div class="inner">                                                 
                             <div class="top-left" style="position: absolute; top: 80px; left: 120px; color: yellow;">
                                 <p><i style="opacity: 50%;">10:45</i><br>Spring Summer 2021<br> Premium Collection </p>
                             </div>
